--- a/ExampleApp/imgui.ini
+++ b/ExampleApp/imgui.ini
@@ -104,8 +104,8 @@ Size=400,600
 Collapsed=0
 
 [Window][Scene View]
-Pos=0,0
-Size=1544,868
+Pos=32,32
+Size=1501,844
 Collapsed=0
 
 [Window][Logs]
@@ -194,7 +194,7 @@ IsChild=1
 Size=1019,260
 
 [Window][Rendering]
-Pos=1314,556
+Pos=1315,556
 Size=272,323
 Collapsed=0
 
@@ -275,7 +275,7 @@ DockSpace       ID=0x08BD597D Window=0x1BBC0F80 Pos=0,0 Size=1600,900 Split=Y Se
     DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=1091,900 CentralNode=1 Selected=0x5E5F7166
   DockNode      ID=0x00000006 Parent=0x08BD597D SizeRef=1600,371 Split=X Selected=0x36AF052B
     DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=236,244 Split=X Selected=0x86DC5FE7
-      DockNode  ID=0x00000007 Parent=0x0000000A SizeRef=268,510 Selected=0x86DC5FE7
+      DockNode  ID=0x00000007 Parent=0x0000000A SizeRef=268,510 Selected=0x1664F641
       DockNode  ID=0x00000008 Parent=0x0000000A SizeRef=1330,510 Selected=0x3DF3100E
     DockNode    ID=0x0000000B Parent=0x00000006 SizeRef=1362,244 Selected=0x36AF052B
 
