shader hot reload

--- a/MofuEngine/MofuEngine.vcxproj
+++ b/MofuEngine/MofuEngine.vcxproj
@@ -223,6 +223,7 @@
     <ClInclude Include="Content\ResourceCreation.h" />
     <ClInclude Include="Content\SerializationUtils.h" />
     <ClInclude Include="Content\ShaderCompilation.h" />
+    <ClInclude Include="Content\Shaders\ShaderData.h" />
     <ClInclude Include="Content\TextureImport.h" />
     <ClInclude Include="Core\EngineModules.h" />
     <ClInclude Include="ECS\ComponentRegistry.h" />
