--- a/ExampleApp/packages.config
+++ b/ExampleApp/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="directxtex_desktop_win10" version="2025.3.25.2" targetFramework="native" />
   <package id="Microsoft.Direct3D.D3D12" version="1.615.1" targetFramework="native" />
+  <package id="vcpkg.C.vcpkgrepo.vcpkg" version="1.0.0" targetFramework="native" />
 </packages>
