--- a/ExampleApp/ExampleApp.vcxproj
+++ b/ExampleApp/ExampleApp.vcxproj
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\vcpkg.C.vcpkgrepo.vcpkg.1.0.0\build\native\vcpkg.C.vcpkgrepo.vcpkg.props" Condition="Exists('..\packages\vcpkg.C.vcpkgrepo.vcpkg.1.0.0\build\native\vcpkg.C.vcpkgrepo.vcpkg.props')" />
   <Import Project="..\packages\Microsoft.Direct3D.D3D12.1.615.1\build\native\Microsoft.Direct3D.D3D12.props" Condition="Exists('..\packages\Microsoft.Direct3D.D3D12.1.615.1\build\native\Microsoft.Direct3D.D3D12.props')" />
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|x64">
@@ -149,6 +150,7 @@
   <ImportGroup Label="ExtensionTargets">
     <Import Project="..\packages\Microsoft.Direct3D.D3D12.1.615.1\build\native\Microsoft.Direct3D.D3D12.targets" Condition="Exists('..\packages\Microsoft.Direct3D.D3D12.1.615.1\build\native\Microsoft.Direct3D.D3D12.targets')" />
     <Import Project="..\packages\directxtex_desktop_win10.2025.3.25.2\build\native\directxtex_desktop_win10.targets" Condition="Exists('..\packages\directxtex_desktop_win10.2025.3.25.2\build\native\directxtex_desktop_win10.targets')" />
+    <Import Project="..\packages\vcpkg.C.vcpkgrepo.vcpkg.1.0.0\build\native\vcpkg.C.vcpkgrepo.vcpkg.targets" Condition="Exists('..\packages\vcpkg.C.vcpkgrepo.vcpkg.1.0.0\build\native\vcpkg.C.vcpkgrepo.vcpkg.targets')" />
   </ImportGroup>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
@@ -157,5 +159,7 @@
     <Error Condition="!Exists('..\packages\Microsoft.Direct3D.D3D12.1.615.1\build\native\Microsoft.Direct3D.D3D12.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.Direct3D.D3D12.1.615.1\build\native\Microsoft.Direct3D.D3D12.props'))" />
     <Error Condition="!Exists('..\packages\Microsoft.Direct3D.D3D12.1.615.1\build\native\Microsoft.Direct3D.D3D12.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.Direct3D.D3D12.1.615.1\build\native\Microsoft.Direct3D.D3D12.targets'))" />
     <Error Condition="!Exists('..\packages\directxtex_desktop_win10.2025.3.25.2\build\native\directxtex_desktop_win10.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\directxtex_desktop_win10.2025.3.25.2\build\native\directxtex_desktop_win10.targets'))" />
+    <Error Condition="!Exists('..\packages\vcpkg.C.vcpkgrepo.vcpkg.1.0.0\build\native\vcpkg.C.vcpkgrepo.vcpkg.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\vcpkg.C.vcpkgrepo.vcpkg.1.0.0\build\native\vcpkg.C.vcpkgrepo.vcpkg.props'))" />
+    <Error Condition="!Exists('..\packages\vcpkg.C.vcpkgrepo.vcpkg.1.0.0\build\native\vcpkg.C.vcpkgrepo.vcpkg.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\vcpkg.C.vcpkgrepo.vcpkg.1.0.0\build\native\vcpkg.C.vcpkgrepo.vcpkg.targets'))" />
   </Target>
 </Project>
