--- a/MofuEngine/MofuEngine.vcxproj
+++ b/MofuEngine/MofuEngine.vcxproj
@@ -197,6 +197,8 @@
     <ClCompile Include="Graphics\UIRenderer.cpp" />
     <ClCompile Include="Input\InputSystem.cpp" />
     <ClCompile Include="Input\Win32Input.cpp" />
+    <ClCompile Include="Physics\DebugRenderer.cpp" />
+    <ClCompile Include="Physics\PhysicsCore.cpp" />
     <ClCompile Include="Platform\Platform.cpp" />
     <ClCompile Include="Platform\Win32Platform.cpp" />
     <ClCompile Include="Platform\Window.cpp" />
@@ -307,6 +309,9 @@
     <ClInclude Include="Input\InputState.h" />
     <ClInclude Include="Input\InputSystem.h" />
     <ClInclude Include="Input\Win32Input.h" />
+    <ClInclude Include="Physics\DebugRenderer.h" />
+    <ClInclude Include="Physics\JobSystem.h" />
+    <ClInclude Include="Physics\PhysicsCore.h" />
     <ClInclude Include="Platform\Platform.h" />
     <ClInclude Include="Platform\PlatformWin32.h" />
     <ClInclude Include="Platform\Window.h" />
