--- a/ExampleApp/ExampleApp.vcxproj
+++ b/ExampleApp/ExampleApp.vcxproj
@@ -57,7 +57,7 @@
     <ClCompile>
       <WarningLevel>Level4</WarningLevel>
       <SDLCheck>false</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;TRACY_ENABLE;YAML_CPP_STATIC_DEFINE;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;TRACY_ENABLE;YAML_CPP_STATIC_DEFINE;JPH_DEBUG_RENDERER;JPH_OBJECT_STREAM;JPH_FLOATING_POINT_EXCEPTIONS_ENABLED;JPH_PROFILE_ENABLED;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>C:\mofuengine\MofuEngine\ExampleApp\External\tracy\public;C:\mofuengine\MofuEngine\MofuEngine\External\imgui\backends;C:\mofuengine\MofuEngine\MofuEngine\External\imgui;C:\mofuengine\MofuEngine\MofuEngine\External\yaml-cpp\include;C:\mofuengine\MofuEngine\MofuEngine\External\imgui\include;C:\mofuengine\MofuEngine\MofuEngine\Common;$(SolutionDir)MofuEngine/</AdditionalIncludeDirectories>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
