--- a/ExampleApp/imgui.ini
+++ b/ExampleApp/imgui.ini
@@ -104,8 +104,8 @@ Size=400,600
 Collapsed=0
 
 [Window][Scene View]
-Pos=664,307
-Size=667,375
+Pos=519,73
+Size=703,395
 Collapsed=0
 
 [Window][Logs]
@@ -195,12 +195,17 @@ Size=1019,260
 
 [Window][Rendering]
 Pos=1313,292
-Size=275,583
+Size=261,191
 Collapsed=0
 
 [Window][Delete?]
 Pos=644,397
 Size=311,105
+Collapsed=0
+
+[Window][Add Object]
+Pos=788,238
+Size=114,65
 Collapsed=0
 
 [Table][0x2048C668,2]
