--- a/MofuEngine/MofuEngine.vcxproj
+++ b/MofuEngine/MofuEngine.vcxproj
@@ -57,7 +57,7 @@
     <ClCompile>
       <WarningLevel>Level4</WarningLevel>
       <SDLCheck>false</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;TRACY_ENABLE;YAML_CPP_STATIC_DEFINE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;TRACY_ENABLE;YAML_CPP_STATIC_DEFINE;JPH_DEBUG_RENDERER;JPH_OBJECT_STREAM;JPH_FLOATING_POINT_EXCEPTIONS_ENABLED;JPH_PROFILE_ENABLED;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
@@ -121,6 +121,7 @@
     <ClCompile Include="Content\EnvironmentMapProcessing.cpp" />
     <ClCompile Include="Content\Guid.cpp" />
     <ClCompile Include="Content\NormalMapProcessing.cpp" />
+    <ClCompile Include="Content\PhysicsImporter.cpp" />
     <ClCompile Include="Content\PrimitiveMeshGeneration.cpp" />
     <ClCompile Include="Content\ResourceCreation.cpp" />
     <ClCompile Include="Content\ShaderCompilation.cpp" />
@@ -149,6 +150,7 @@
     <ClCompile Include="Editor\ImporterView.cpp" />
     <ClCompile Include="Editor\Material.cpp" />
     <ClCompile Include="Editor\MaterialEditor.cpp" />
+    <ClCompile Include="Editor\ObjectAddInterface.cpp" />
     <ClCompile Include="Editor\PrefabView.cpp" />
     <ClCompile Include="Editor\Project\Project.cpp" />
     <ClCompile Include="Editor\RenderingConsole.cpp" />
@@ -197,6 +199,7 @@
     <ClCompile Include="Graphics\UIRenderer.cpp" />
     <ClCompile Include="Input\InputSystem.cpp" />
     <ClCompile Include="Input\Win32Input.cpp" />
+    <ClCompile Include="Physics\BodyInterface.cpp" />
     <ClCompile Include="Physics\DebugRenderer.cpp" />
     <ClCompile Include="Physics\PhysicsCore.cpp" />
     <ClCompile Include="Platform\Platform.cpp" />
@@ -215,6 +218,7 @@
     <ClInclude Include="Content\AssetImporter.h" />
     <ClInclude Include="Content\ContentManagement.h" />
     <ClInclude Include="Content\EngineShaders.h" />
+    <ClInclude Include="Content\PhysicsImporter.h" />
     <ClInclude Include="Content\Shaders\ContentProcessingShaders.h" />
     <ClInclude Include="Content\ContentUtils.h" />
     <ClInclude Include="Content\EditorContentManager.h" />
@@ -252,6 +256,7 @@
     <ClInclude Include="Editor\ImporterView.h" />
     <ClInclude Include="Editor\Material.h" />
     <ClInclude Include="Editor\MaterialEditor.h" />
+    <ClInclude Include="Editor\ObjectAddInterface.h" />
     <ClInclude Include="Editor\PrefabView.h" />
     <ClInclude Include="Editor\Project\Project.h" />
     <ClInclude Include="Editor\RenderingConsole.h" />
@@ -309,9 +314,13 @@
     <ClInclude Include="Input\InputState.h" />
     <ClInclude Include="Input\InputSystem.h" />
     <ClInclude Include="Input\Win32Input.h" />
+    <ClInclude Include="Physics\BodyInterface.h" />
+    <ClInclude Include="Physics\BroadPhaseLayerInterface.h" />
     <ClInclude Include="Physics\DebugRenderer.h" />
     <ClInclude Include="Physics\JobSystem.h" />
+    <ClInclude Include="Physics\JoltCommon.h" />
     <ClInclude Include="Physics\PhysicsCore.h" />
+    <ClInclude Include="Physics\PhysicsLayers.h" />
     <ClInclude Include="Platform\Platform.h" />
     <ClInclude Include="Platform\PlatformWin32.h" />
     <ClInclude Include="Platform\Window.h" />
