entity enabling and disabling; changing primitive physics shapes for an entity

--- a/MofuEngine/MofuEngine.vcxproj
+++ b/MofuEngine/MofuEngine.vcxproj
@@ -152,6 +152,7 @@
     <ClCompile Include="Editor\MaterialEditor.cpp" />
     <ClCompile Include="Editor\ObjectAddInterface.cpp" />
     <ClCompile Include="Editor\ObjectPicker.cpp" />
+    <ClCompile Include="Editor\PhysicsEditor\PhysicsShapesInterface.cpp" />
     <ClCompile Include="Editor\PrefabView.cpp" />
     <ClCompile Include="Editor\Project\Project.cpp" />
     <ClCompile Include="Editor\RenderingConsole.cpp" />
@@ -262,6 +263,7 @@
     <ClInclude Include="Editor\MaterialEditor.h" />
     <ClInclude Include="Editor\ObjectAddInterface.h" />
     <ClInclude Include="Editor\ObjectPicker.h" />
+    <ClInclude Include="Editor\PhysicsEditor\PhysicsShapesInterface.h" />
     <ClInclude Include="Editor\PrefabView.h" />
     <ClInclude Include="Editor\Project\Project.h" />
     <ClInclude Include="Editor\RenderingConsole.h" />
