--- a/ExampleApp/imgui.ini
+++ b/ExampleApp/imgui.ini
@@ -7,13 +7,13 @@ Collapsed=0
 Pos=994,0
 Size=286,720
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000003,0
 
 [Window][Dear ImGui Demo]
-Pos=509,0
-Size=1091,527
+Pos=500,19
+Size=740,598
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000003,0
 
 [Window][Example: Documents]
 Pos=60,60
@@ -29,7 +29,7 @@ Collapsed=0
 Pos=768,0
 Size=432,654
 Collapsed=0
-DockId=0x00000002,1
+DockId=0x00000003,1
 
 [Window][Example: Property editor/##tree_37EC733C]
 IsChild=1
@@ -39,7 +39,7 @@ Size=300,619
 Pos=818,0
 Size=462,720
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000003,0
 
 [Window][Example: Assets Browser]
 Pos=60,60
@@ -95,8 +95,8 @@ Size=353,1003
 Collapsed=0
 
 [Window][WindowOverViewport_11111111]
-Pos=0,0
-Size=1600,900
+Pos=0,19
+Size=1600,881
 Collapsed=0
 
 [Window][DockSpaceHost]
@@ -104,14 +104,15 @@ Size=400,600
 Collapsed=0
 
 [Window][Scene View]
-Pos=478,128
-Size=1091,613
+Pos=420,264
+Size=1027,577
 Collapsed=0
 
 [Window][Logs]
-Pos=1114,36
-Size=477,500
+Pos=1242,19
+Size=358,598
 Collapsed=0
+DockId=0x00000004,0
 
 [Window][Stacked 2]
 Pos=527,313
@@ -130,14 +131,14 @@ Collapsed=0
 DockId=0x0000000B,0
 
 [Window][Scene hierarchy]
-Pos=0,0
-Size=507,527
+Pos=0,19
+Size=498,598
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Scene hierarchy/##tree_2774B01A]
 IsChild=1
-Size=175,395
+Size=134,395
 
 [Window][Dear ImGui ID Stack Tool]
 Pos=60,60
@@ -150,7 +151,7 @@ Size=796,865
 Collapsed=0
 
 [Window][Material View]
-Pos=1186,30
+Pos=1183,30
 Size=418,679
 Collapsed=0
 
@@ -167,8 +168,8 @@ Collapsed=0
 DockId=0x00000007,0
 
 [Window][Content Browser]
-Pos=0,529
-Size=1600,371
+Pos=0,619
+Size=1600,281
 Collapsed=0
 DockId=0x00000008,0
 
@@ -204,8 +205,13 @@ Size=311,105
 Collapsed=0
 
 [Window][Add Object]
-Pos=1057,494
+Pos=1037,331
 Size=114,65
+Collapsed=0
+
+[Window][Font View]
+Pos=460,123
+Size=528,325
 Collapsed=0
 
 [Table][0x2048C668,2]
@@ -241,7 +247,7 @@ Column 5  Width=-1
 
 [Table][0xE0272E39,2]
 RefScale=13
-Column 0  Width=101
+Column 0  Width=123
 Column 1  Weight=2.0000
 
 [Table][0x915FD707,2]
@@ -274,11 +280,13 @@ Column 12 Width=19
 Column 13 Width=19
 
 [Docking][Data]
-DockSpace       ID=0x08BD597D Window=0x1BBC0F80 Pos=0,0 Size=1600,900 Split=Y Selected=0x5E5F7166
-  DockNode      ID=0x00000005 Parent=0x08BD597D SizeRef=1600,527 Split=X
-    DockNode    ID=0x00000001 Parent=0x00000005 SizeRef=507,900 Selected=0xBE5CABD5
-    DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=1091,900 CentralNode=1 Selected=0x5E5F7166
-  DockNode      ID=0x00000006 Parent=0x08BD597D SizeRef=1600,371 Split=X Selected=0x36AF052B
+DockSpace       ID=0x08BD597D Window=0x1BBC0F80 Pos=0,19 Size=1600,881 Split=Y Selected=0x5E5F7166
+  DockNode      ID=0x00000005 Parent=0x08BD597D SizeRef=1600,617 Split=X
+    DockNode    ID=0x00000001 Parent=0x00000005 SizeRef=498,900 Selected=0xBE5CABD5
+    DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=1100,900 Split=X Selected=0x15E43931
+      DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=740,527 CentralNode=1 Selected=0x5E5F7166
+      DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=358,527 Selected=0xD7907EC4
+  DockNode      ID=0x00000006 Parent=0x08BD597D SizeRef=1600,281 Split=X Selected=0x36AF052B
     DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=236,244 Split=X Selected=0x86DC5FE7
       DockNode  ID=0x00000007 Parent=0x0000000A SizeRef=268,510 Selected=0x1664F641
       DockNode  ID=0x00000008 Parent=0x0000000A SizeRef=1330,510 Selected=0x3DF3100E
