--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ ExampleApp/Assets/*
 ExampleApp/shaders/*
 ExampleApp/Projects/*
 ExampleApp/External/tracy/
+MofuEngine/Content/EngineAssets/
 
 bin/*
 bin-int/*
