--- a/ExampleApp/imgui.ini
+++ b/ExampleApp/imgui.ini
@@ -104,8 +104,8 @@ Size=400,600
 Collapsed=0
 
 [Window][Scene View]
-Pos=420,264
-Size=1027,577
+Pos=454,10
+Size=1109,623
 Collapsed=0
 
 [Window][Logs]
@@ -156,20 +156,20 @@ Size=418,679
 Collapsed=0
 
 [Window][FBX Import Summary]
-Pos=0,529
-Size=268,371
+Pos=0,619
+Size=268,281
 Collapsed=0
 DockId=0x00000007,1
 
 [Window][Import settings]
-Pos=0,529
-Size=268,371
+Pos=0,619
+Size=367,281
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Content Browser]
-Pos=0,619
-Size=1600,281
+Pos=369,619
+Size=1231,281
 Collapsed=0
 DockId=0x00000008,0
 
@@ -288,7 +288,7 @@ DockSpace       ID=0x08BD597D Window=0x1BBC0F80 Pos=0,19 Size=1600,881 Split=Y S
       DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=358,527 Selected=0xD7907EC4
   DockNode      ID=0x00000006 Parent=0x08BD597D SizeRef=1600,281 Split=X Selected=0x36AF052B
     DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=236,244 Split=X Selected=0x86DC5FE7
-      DockNode  ID=0x00000007 Parent=0x0000000A SizeRef=268,510 Selected=0x1664F641
-      DockNode  ID=0x00000008 Parent=0x0000000A SizeRef=1330,510 Selected=0x3DF3100E
+      DockNode  ID=0x00000007 Parent=0x0000000A SizeRef=367,510 Selected=0x86DC5FE7
+      DockNode  ID=0x00000008 Parent=0x0000000A SizeRef=1231,510 Selected=0x3DF3100E
     DockNode    ID=0x0000000B Parent=0x00000006 SizeRef=1362,244 Selected=0x36AF052B
 
